--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -3,17 +3,29 @@
     Sign Up
 {% endblock %}
 {% block body %}
-    <h1>SignUp Page</h1>
-    <form action="" method="post">
-        <p>Enter Email</p>
-        <input type="email" name="email" id="">
-        <br>
-        <p>Enter Password</p>
-        <input type="password" name="password">
-        <br>
-        <p>Enter Name</p>
-        <input type="text" name="name">
-        <br>
-        <button type="submit">Register</button>
-    </form>
+<div class="m-2">
+    <div class=" mx-auto my-auto w-full max-w-sm p-4 bg-white border border-gray-200 rounded-lg shadow-md sm:p-6 md:p-8 dark:bg-gray-800 dark:border-gray-700">
+        <form class="space-y-6" action="" method="post">
+            <h5 class="text-xl font-medium text-gray-900 dark:text-white">Sign Up on our platform</h5>
+            <div>
+                <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your email</label>
+                <input type="email" name="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="name@company.com" required>
+            </div>
+            <div>
+                <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your Name</label>
+                <input type="text" name="name" id="name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" placeholder="Adithya Narayan" required>
+            </div>
+            <div>
+                <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your password</label>
+                <input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white" >
+            </div>
+           
+            <button type="submit" class="w-full text-white bg-blue-700 hover:bg-blue-400 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Create Account</button>
+            <p class="text-center ml-2 pb-5 text-sm font-medium text-gray-900 dark:text-gray-300" >OR</p>
+            <a href="{{url_for('auth.logingoogle')}}" class="py-2.5" ><button type="button" class="w-full text-white bg-emerald-800 hover:bg-emerald-400 focus:ring-4 focus:outline-none focus:ring-emerald-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Register Via Google</button></a>
+    
+        </form>
+    </div>
+</div>
+<br><br><br><br><br><br>
 {% endblock %}
