--- a/app/templates/packages.html
+++ b/app/templates/packages.html
@@ -3,23 +3,34 @@
     Packages
 {% endblock %}
 {% block body %}
-    <h1>Our Packages</h1>
     {% if packages %}
-    <br>
-    <br>
-    <hr>
-        {% for package in packages %}
-        <h3>{{package.name}}</h3>
-        <p>{{package|string}}</p>
-        <a href="{{url_for('transaction.book_package',id=package.id)}}">Book</a>
-        <a href="">More Info</a>
+    
+    <div class="container flex-row mx-16 mt-20">
+        <h1 class="font-semibold mb-5 text-3xl">Explore Our Packages</h1>
+        <div class="flex flex-row gap-5" >
+            {% for package in packages %}
+        <div class="w-full max-w-sm bg-white rounded-lg shadow-md dark:bg-gray-800 dark:border-gray-700">
+            <a href="#">
+                <img class="p-8 rounded-md" src="{{url_for('static',filename='imgs/leh.jpg')}}" alt="product image" />
+            </a>
+            <div class="px-5 pb-5">
+                <a href="#">
+                    <h5 class="text-xl font-semibold tracking-tight text-gray-900 dark:text-white">{{package.name}}</h5>
+                </a>
+                <h5 class="my-2 text-md font-semibold tracking-tight text-gray-900 dark:text-white">{{package|string}}</h5>
+                <div class="flex items-center justify-between">
+                    <span class="text-3xl font-bold text-gray-900 dark:text-white">₹1500</span>
+                    <a href="{{url_for('transaction.book_package',id=package.id)}}" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Book Now</a>
+                </div>
+            </div>
+        </div>
+        
         {% endfor %}
-    <hr>
-    <br>
-    <br>
-    {%else%}
-       
-        <h1>No Packages Available As Of Now</h1>
+        </div>
+        {%else%}
+        <h1 class="font-semibold mb-5 text-3xl">No Packages Available</h1>
     {%endif%}
+    </div>
+    <br><br><br><br><br><br><br>
 {% endblock %}   
 
