--- a/app/templates/packages.html
+++ b/app/templates/packages.html
@@ -5,9 +5,9 @@
 {% block body %}
     {% if packages %}
     
-    <div class="container flex-row mx-16 mt-20">
-        <h1 class="font-semibold mb-5 text-3xl">Explore Our Packages</h1>
-        <div class="flex flex-row gap-5" >
+    <div class="container sm:mx-1 md:mx-10 mt-20">
+        <h1 class="font-semibold mb-5 text-3xl">Explore Packages</h1>
+        <div class="flex flex-row gap-2" >
             {% for package in packages %}
         <div class="w-full max-w-sm bg-white rounded-lg shadow-md dark:bg-gray-800 dark:border-gray-700">
             <a href="#">
