--- a/app/templates/book_package.html
+++ b/app/templates/book_package.html
@@ -3,31 +3,56 @@
 Book Package
 {% endblock %}
 {% block body %}
-    <h1>Book Package - {{package.name}}</h1>
-    <img src="package.image" alt="Package Image">
-    <h4>Contact: {{package.contact}}</h4>
-    <h4>{{package|string}}</h4>
-    <h4>Activities</h4>
-    <ul>
-        {% for a in package.activities %}
-        <li>{{a.name}}</li>
-        {% endfor %}
-    </ul>
-    <hr>
-    <h1>Booking Details</h1>
-    <br>
-    <p><b>Name</b></p> <input type="text" name="" disabled value="{{current_user.name}}" id="">
-    <br>
-    <p><b>Email</b></p> <input type="text" name="" disabled value="{{current_user.email}}" id="">
-    <br>
-    <p><b>Mobile</b></p> <input type="text" name="" value="{{current_user.phone}}" id="">
-    <form action="" method="post">
-        <br>
-        <p><b>Number of People Accompanying</b></p> <input type="number" value=0 name="numberofpeople" id="addperson">
-        <div id="peopleDetails" >
-            
+    <div class="container mt-10 mb-10  grid grid-cols-1 place-items-center ">
+        <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow-md dark:bg-gray-800 dark:border-gray-700">
+            <a href="">
+                <img class="rounded-t-lg" src="{{package.image}}" alt="" />
+            </a>
+            <div class="p-5">
+                <a href="#">
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{package.name}}</h5>
+                </a>
+                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{package|string}}</p>
+                <a href="{{package.details_file}}" download="" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                    Brochure
+                    <svg aria-hidden="true" class="w-4 h-4 ml-2 -mr-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                </a>
+            </div>
         </div>
-    <button type="submit">Submit</button>
-    </form>
+    </div>
+    <hr>
+    <div class="container  grid grid-cols-1 place-items-center">
+        <h1  class="font-black text-5xl font-sans " >Booking Details</h1>
+        <div class="formcontainer w-1/2 border-2 p-4 rounded-md my-10 grid  grid-cols-1  gap-4">
+        
+        <div class="mb-6">
+        <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your email</label>
+        <input type="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@flowbite.com" disabled value="{{current_user.email}}" required>
+        </div>
+        <div class="mb-6">
+        <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your Name</label>
+        <input type="text" id="password" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" disabled value="{{current_user.name}}" required>
+        </div>
+        <div class="mb-6 ">
+            <form action="" method="post">
+                <div class="mb-6 col-span-2">
+                    <label for="phno" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact Number</label>
+                    <input type="text" id="phno" name="phno" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required>
+                </div>
+                <div class="mb-6 col-span-2">
+                    <label for="addperson" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Number of People Accompanying</label>
+                    <input type="number" id="addperson" name="numberofpeople" value="0" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required>
+                </div>
+                <div id="peopleDetails">
+                    
+                </div>
+                <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
+            </form>
+        </div>
+        
+        </div>
+        
+    </div>
+   
     <script src="{{url_for('static',filename='js/book_package.js')}}"></script>
 {% endblock %}
