--- a/app/templates/packages.html
+++ b/app/templates/packages.html
@@ -11,7 +11,7 @@
             {% for package in packages %}
         <div class="w-full max-w-sm bg-white rounded-lg shadow-md dark:bg-gray-800 dark:border-gray-700">
             <a href="#">
-                <img class="p-8 rounded-md" src="{{url_for('static',filename='imgs/leh.jpg')}}" alt="product image" />
+                <img class="p-8 rounded-md" src="{{package.image}}" alt="product image" />
             </a>
             <div class="px-5 pb-5">
                 <a href="#">
